<resources>
    <string name="app_name">Plants Fortress</string>
    <string name="welcome">welcome</string>
    <string name="sign_in_to_continue">sign in to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="forgotten_password">forgotten password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="get_password">Get Password</string>
    <string name="todo">todo</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_one_time_otp">we will send one time OTP</string>
    <string name="to_your_email">to your email</string>
    <string name="send">Send</string>
    <string name="get_pass_again">Get Pass Again</string>
    <string name="enter_received_otp">Enter received OTP</string>
    <string name="did_not_receive_otp">Did not receive OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="example_mail">****@gmail.com</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="show_password">Show Password</string>
    <string name="done">Done</string>
    <string name="join_us">Join Us</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email_address">Email Address</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="pot_status">POT STATUS:</string>
    <string name="online">Online</string>
    <string name="sensors">SENSORS</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="snail_barrier">Snail Barrier</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="realtime_sensor_data">REALTIME SENSOR DATA</string>
    <string name="oct_11">(Oct 11)</string>
    <string name="moisture">MOISTURE</string>
    <string name="_40">40%</string>
    <string name="uv_light">UV LIGHT</string>
    <string name="sunlight_level">Sunlight Level</string>
    <string name="_4">4</string>
    <string name="bright">( Bright )</string>
    <string name="battery">BATTERY</string>
    <string name="pot_battery_level">Pot Battery Level</string>
    <string name="_50">50%</string>
    <string name="_1448h">( 1448h )</string>
    <string name="attack">ATTACK</string>
    <string name="snail_attack_count">Snail Attack Count</string>
    <string name="_5">5</string>
    <string name="in_3days">( in 3days )</string>
    <string name="pot_collection_id">Pot Collection ID</string>
    <string name="ok">OK</string>
    <string name="check_your_internet_connection">check your internet connection</string>
    <string name="and_try_again">and Try Again</string>
    <string name="yes">Yes</string>
    <string name="the_plants_fortress">The Plants Fortress</string>
    <string name="plants_fortress">Plants Fortress</string>
    <string name="from">from</string>
    <string name="group_8">Group 8</string>
    <string name="reset">Reset</string>
    <string name="pot_01">POT 01</string>
</resources>