<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetStepOne"
    android:orientation="vertical"
    android:background="#FF002E2A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"

            android:src="@drawable/key1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/prosto_one"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_pass_again"
            android:textColor="#1D857C"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:layout_gravity="center_horizontal"

            android:src="@drawable/sendlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/prosto_one"
            android:text="@string/otp_verification"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coda"
            android:text="@string/we_will_send_one_time_otp"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coda"
            android:text="@string/to_your_email"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/Uname"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="#DAD7D7"
                android:textColorHint="#676666"
                android:importantForAutofill="no" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/nextbtn"
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="25dp"
                    android:onClick="sendOTP"
                    android:backgroundTint="#FFBF00">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="#FF002E2A"
                        android:onClick="sendOTP"
                        android:textAlignment="center"/>

                </androidx.cardview.widget.CardView>

            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>