<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetStepThree"
    android:orientation="vertical"
    android:background="#FF002E2A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:transitionName="logo_image"
            android:src="@drawable/change_key"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/prosto_one"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_password"
            android:textColor="#1D857C"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coda"
            android:text="get your new password"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coda"
            android:text="from changing"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/NPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#676666" />

            <EditText
                android:id="@+id/rNPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#676666"
                android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:layout_marginTop="5dp"
                android:text="@string/show_password"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:checked="false"
                android:onClick="show"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/donebtn"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="right"
                app:cardCornerRadius="25dp"
                android:onClick="Done"
                android:backgroundTint="#FFBF00"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="Done"
                    android:text="@string/done"
                    android:textAlignment="center"
                    android:textColor="#FF002E2A"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>