<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="#FF002E2A"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/theme_main"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/theme_sub"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            tools:ignore="RelativeOverlap,UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/sign_in_to_continue"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/signup_logo"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/sign_in"
                    android:textColor="#191919"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/PhoneNo_or_Email"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/navy_outline"
                    android:drawableStart="@drawable/l_user"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="#000000"
                    android:textColorHint="#676666"
                    tools:ignore="TextFields" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:drawableStart="@drawable/l_lockn"
                        android:drawablePadding="12dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:background="@drawable/navy_outline"
                        android:ems="10"
                        android:maxLength="30"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:textColorHint="#676666"
                        app:passwordToggleEnabled="true"
                        android:importantForAutofill="no" />

                    <ImageView
                        android:id="@+id/toggle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="-48dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/togglenn"
                        android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:onClick="forget"
                        android:text="@string/forgotten_password"
                        android:textAllCaps="false"
                        android:textColor="#060A1E"
                        android:textSize="18sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ProgressBar
                        android:id="@+id/login_wait_pro_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/default_1"
                        android:layout_marginTop="50dp"
                        android:layout_centerHorizontal="true"
                        android:visibility="invisible"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Log_In_Btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginEnd="70dp"
                        app:cardCornerRadius="25dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/login"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"
                            android:onClick="log"
                            android:background="@drawable/login_btn_ripple_effect" />

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:onClick="createAC"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="#00B0FF"
                    android:textSize="21sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>