<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetStepTwo"
    android:orientation="vertical"
    android:background="#FF002E2A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/mail"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            android:transitionName="logo_image"
            android:src="@drawable/maillogo"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/OTP_very_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/prosto_one"
            android:text="@string/otp_verification"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/do_thing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coda"
            android:text="@string/enter_received_otp"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mailview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cambo"
            android:text="@string/example_mail"
            android:textColor="#A8A8A8"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/f"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/otp_outline"
                android:ems="10"
                android:textSize="28sp"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="#DAD7D7"
                android:imeOptions="actionNext"
                tools:ignore = "LabelFor"
                android:maxLength="1"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/s"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/otp_outline"
                android:ems="10"
                android:textSize="28sp"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="#DAD7D7"
                android:imeOptions="actionNext"
                tools:ignore = "LabelFor"
                android:maxLength="1"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/t"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/otp_outline"
                android:ems="10"
                android:textSize="28sp"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="#DAD7D7"
                android:imeOptions="actionNext"
                tools:ignore = "LabelFor"
                android:maxLength="1"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/fr"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/otp_outline"
                android:ems="10"
                android:textSize="28sp"
                android:textAlignment="center"
                android:inputType="number"
                android:textColor="#DAD7D7"
                android:imeOptions="actionDone"
                tools:ignore = "LabelFor"
                android:maxLength="1"
                android:importantForAutofill="no" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:fontFamily="@font/coda"
                android:text="@string/did_not_receive_otp"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/coda"
                android:text="@string/resend_otp"
                android:textColor="#FF9800"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="Rsend"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/verybtn"
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:cardCornerRadius="25dp"
                android:onClick="Verify"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FFBF00"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/verify"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#FF002E2A"
                    android:onClick="Verify"
                    android:textAlignment="center" />

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>